Complete Enhancement: Browser Extension + Advanced Features
 Features Added:
-  Complete Chrome/Edge browser extension with Manifest V3
-  Enhanced web app with extension integration
-  Smart clipboard URL detection and auto-paste
-  Responsive design with mobile optimization
-  Activity-based marker coloring and sizing
-  100% privacy-first client-side processing

 Technical Improvements:
- Multi-format file support (JSON, CSV, TXT)
- Browser-specific guidance and detection
- Real-time extension-web app communication
- Advanced filtering and search capabilities
- Comprehensive error handling and notifications
- Modern CSS with gradients and animations

 Extension Features:
- One-click history export with time range selection
- Direct web app integration via content scripts
- Privacy-compliant history access
- Background service worker for data processing
- Popup interface with export options

 UI/UX Enhancements:
- Tabbed interface for different upload methods
- Smart paste tools with clipboard integration
- Extension installation guide and status
- Enhanced demo data and sample functionality
- Comprehensive documentation and README

Ready for production deployment on GitHub Pages!

--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -1,33 +1,37 @@
 {
   "manifest_version": 3,
-  "name": "Browser History Map Explorer",
-  "version": "1.0",
-  "description": "Export your browser history for visualization on Browser History Map Explorer",
+  "name": "Browser History Map Exporter",
+  "version": "1.0.0",
+  "description": "Export your browser history to Browser History Map Explorer for visualization",
   "permissions": [
     "history",
     "activeTab",
     "storage"
   ],
-  "host_permissions": [
-    "https://shikhary.github.io/*",
-    "http://localhost:*"
-  ],
   "action": {
     "default_popup": "popup.html",
-    "default_title": "Export Browser History"
+    "default_title": "Export History to Map"
   },
-  "content_scripts": [
-    {
-      "matches": ["https://shikhary.github.io/browser-history-map/*", "http://localhost:*/*"],
-      "js": ["content.js"]
-    }
-  ],
   "background": {
     "service_worker": "background.js"
   },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
+    }
+  ],
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
-  }
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
