--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -6,7 +6,9 @@
   "permissions": [
     "history",
     "activeTab",
-    "storage"
+    "storage",
+    "downloads",
+    "tabs"
   ],
   "action": {
     "default_popup": "popup.html",
@@ -17,7 +19,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://shikhary.github.io/browser-history-map/*"],
       "js": ["content.js"],
       "run_at": "document_idle"
     }
